<?xml version="1.0"?>
<package format="2">

  <name>data_visualization</name>
  <version>0.0.0</version>
  <description>The data_visualization package</description>

  <maintainer email="pknaperek@gmail.com">Patrik Knaperek</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sgtdv_msgs</depend>
  <depend>std_msgs</depend>

</package>
